refactor(admin-api,amp): remove dummy networks field from schema endpoint
